<?xml version="1.0"?>
<package format="2">
  <name>canary_bringup</name>
  <version>0.0.0</version>
  <description>The canary_bringup package</description>

  <maintainer email="vboxuser@todo.todo">vboxuser</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roslaunch</build_depend>
  <build_depend>canary_pose</build_depend>
  <build_depend>canary_lidar</build_depend>
  <build_depend>canary_sensors</build_depend>
  
  <build_export_depend>roslaunch</build_export_depend>
  <build_export_depend>canary_pose</build_export_depend>
  <build_export_depend>canary_lidar</build_export_depend>
  <build_export_depend>canary_sensors</build_export_depend>
  
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>canary_pose</exec_depend>
  <exec_depend>canary_lidar</exec_depend>
  <exec_depend>canary_sensors</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
